--- a/app/globals.css
+++ b/app/globals.css
@@ -26,6 +26,21 @@ main {
   padding-top: 57px;
 }
 
+.hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: oklch(0.6 0 100 / 50%);
+  width: 100%;
+  height: 13em;
+}
+
+h1 {
+  font-size: 2em;
+}
+
 /* small */
 @media (min-width: 640px) {
 }
