--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,7 @@ nav {
   border-bottom: 1px solid var(--color-gray-300);
   padding: 1em 0.5em;
   z-index: 1;
+  box-shadow: 0px 1px 10px lightgray, 0em 5px 20px lightgray;
 }
 
 nav .flex-container {
@@ -22,6 +23,12 @@ nav span {
 }
 
 /* Main Page Content - {children} */
+
+.contact,
+.about,
+.projects {
+  padding-top: 58px;
+}
 
 .hero {
   display: flex;
