--- a/app/globals.css
+++ b/app/globals.css
@@ -52,6 +52,55 @@ nav span {
   padding-top: 4.125em;
 }
 
+/* about page */
+
+.about {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.profile-picture {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  border-radius: 1em;
+  width: 15em;
+  height: 15em;
+  overflow: hidden;
+  margin: 1em;
+}
+
+.profile-background {
+  background-image: url(/images/TriangleGradient.png);
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  rotate: 180deg;
+}
+
+.profile-frosted-glass {
+  position: absolute;
+  background-color: oklch(1 0 0 / 4%);
+  backdrop-filter: blur(3px);
+  box-shadow: 0px 0px 5em oklch(0 0 0 / 60%), 0px 0px 2em oklch(0 0 0 / 50%);
+  border-radius: 100%;
+  width: 80%;
+  height: 80%;
+  transform: translate(-50%, -50%);
+  top: 60%;
+  left: 50%;
+  z-index: 1;
+}
+
+.profile-picture img {
+  position: absolute;
+  object-fit: contain;
+  width: inherit;
+  height: inherit;
+  bottom: -32px;
+  z-index: 2;
+}
 
 /* small */
 @media (min-width: 640px) {
